--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,17 +2,12 @@ name: Reuse-build
 
 on:
   workflow_dispatch:
-    inputs:
-      release_cycle:
-        description: 'Enter the release cycle'
-        required: true
-        default: '25MR1'
 
 jobs:
   Build:
     uses: kdemonie/actions-sandbox/.github/workflows/build.yml@v1
     with:
-      RELEASE_CYCLE: ${{vars.ENV_VAR}}
+      RELEASE_CYCLE: ${{ vars.RELEASE }}
       ENVIRONMENT: "STAGING"
     secrets:
       inherit
