--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
     uses: kdemonie/actions-sandbox/.github/workflows/build.yml@v1
     needs: [Prepare-env]
     with:
-      RELEASE_CYCLE: ${{ needs.Prepare-env.outputs.RELEASE_CYCLE }}
+      RELEASE_CYCLE: ${{ needs.Prepare-env.RELEASE_CYCLE }}
       ENVIRONMENT: "STAGING"
     secrets:
       inherit
