--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,6 +6,8 @@ on:
 jobs:
   Prepare-env:
     runs-on: ubuntu-latest
+    environment:
+      name: PRODUCTION
     steps:
        - run: echo "null"
     outputs:
