--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,8 +6,6 @@ on:
 jobs:
   Prepare-env:
     runs-on: ubuntu-latest
-    environment:
-      name: PRODUCTION
     steps:
        - name: print
          run: echo "${{ vars.BTP_SUBACCOUNT }}"
@@ -15,6 +13,12 @@ jobs:
          run: echo "RELEASE_CYCLE=${{ vars.BTP_SUBACCOUNT }}" >> $GITHUB_OUTPUT
     outputs:
       RELEASE_CYCLE: ${{ steps.init.outputs.RELEASE_CYCLE }}
+  test-output:
+    runs-on: ubuntu-latest
+    needs: [Prepare-env]
+    steps:
+       - name: print
+         run: echo "${{ needs.Prepare-env.RELEASE_CYCLE }}"
   Build:
     uses: kdemonie/actions-sandbox/.github/workflows/build.yml@v1
     needs: [Prepare-env]
