--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,10 +10,8 @@ jobs:
     steps:
        - name: print
          run: echo "${{ vars.BTP_SUBACCOUNT }}"
-       - name: init
-         run: echo "RELEASE_CYCLE=${{ vars.BTP_SUBACCOUNT }}" >> $GITHUB_OUTPUT
     outputs:
-      RELEASE_CYCLE: ${{ steps.init.outputs.RELEASE_CYCLE }}
+      RELEASE_CYCLE: ${{ vars.BTP_SUBACCOUNT }}
   test-output:
     runs-on: ubuntu-latest
     needs: [Prepare-env]
